# wp-core-connectors

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
_gal/: work.gxl
src/: builtin.rs  lib.rs
src/net/transport/writer/: mod.rs
src/sinks/: arrow_conv.rs  arrow_file.rs  arrow_file_std.rs  arrow_ipc.rs  blackhole_factory.rs  file.rs  file_factory.rs  mod.rs  syslog.rs  tcp.rs
src/sinks/arrow_conv/: batch.rs  mod.rs  schema.rs
src/sources/: mod.rs
src/sources/batch/: arrow.rs  error.rs  file.rs  mod.rs  ndjson.rs  payload.rs  tcp.rs
src/sources/file/: chunk_reader.rs  factory.rs  source.rs
src/sources/syslog/: config.rs  constants.rs  factory.rs  mod.rs  tcp_source.rs  udp_source.rs
src/sources/tcp/: TCP_SOURCE_DESIGN.md  acceptor.rs  config.rs  factory.rs  framing.rs  mod.rs  source.rs
src/sources/tcp/conn/: connection.rs
src/sources/tcp/worker/: listener_loop.rs
