[package]
name = "wp-core-connectors"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["WarpParse Dev Team"]
description = "Core connector registry and sink runtimes for WarpParse"
repository = "https://github.com/wp-labs/wp-core-connectors"
homepage = "https://github.com/wp-labs/wp-core-connectors"
documentation = "https://docs.rs/wp-core-connectors"
keywords = ["warpparse", "connector", "sink", "syslog", "arrow"]
categories = ["asynchronous", "network-programming"]

[lib]
name = "wp_core_connectors"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.11"
chrono = "0.4"
hostname = "0.4"
libc = "0.2"
once_cell = "1.21"
serde_json = "1.0"
log = "0.4"
socket2 = "0.6"
toml = "1.0"
orion_conf = "0.5"
tokio = { version = "1.48", features = ["full"] }
wp-connector-api = "0.8"
wp-model-core = "0.8"
wp-arrow = "0.1"
wp-data-fmt = "0.2"

[features]
dev-tools = []
