[package]
name = "wp-core-connectors"
version = "0.1.4"
edition = "2024"
license = "Apache-2.0"
authors = ["WarpParse Dev Team"]
description = "Core connector registry and sink runtimes for WarpParse"
repository = "https://github.com/wp-labs/wp-core-connectors"
homepage = "https://github.com/wp-labs/wp-core-connectors"
documentation = "https://docs.rs/wp-core-connectors"
keywords = ["warpparse", "connector", "sink", "syslog", "arrow"]
categories = ["asynchronous", "network-programming"]

[lib]
name = "wp_core_connectors"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
arrow = { version = "54", default-features = false, features = ["ipc"] }
async-trait = "0.1"
base64 = "0.22"
bytes = "1.11"
chrono = "0.4"
glob = "0.3"
hostname = "0.4"
hex = "0.4"
libc = "0.2"
once_cell = "1.21"
serde_json = "1.0"
log = "0.4"
memchr = "2.7"
socket2 = "0.6"
toml = "1.0"
orion_conf = "0.5"
orion-error = "0.6"
thiserror = "2"
tokio = { version = "1.48", features = ["full"] }
wp-connector-api = "0.9"
wp-model-core = "0.8"
wp-arrow = "0.1"
wp-conf-base = "0.2"
wp-data-fmt = "0.2"
wp-log = "0.2"

[features]
dev-tools = []

[dev-dependencies]
async-broadcast = "0.7"
tempfile = "3.23"
